--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-    {% block content %}
-    {% endblock %}
+    {% include 'galeria/partials/_navbar.html' %}
+    {% block content %}{% endblock %}
+    {% include 'galeria/partials/_footer.html' %} 
 </body>
 
 </html>
