--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -24,8 +24,12 @@
                             {% if cards %}
                             {% for fotografia in cards %}
                             <li class="card">
-                                <a href="{% url 'imagem' fotografia.id %}">
-                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto }}" alt="foto">
+                                <a href="{% url 'imagem' fotografia.id %}{{ fotografia.foto }}">
+                                {%if fotografia.foto == "" or fotografia == null %}
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png' %}" alt="foto">
+                                {%else%}
+                                    <img class="card__imagem" src="{{fotografia.foto.url}}" alt="foto">
+                                {%endif%}
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
