--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -24,7 +24,7 @@
                             {% if cards %}
                             {% for fotografia in cards %}
                             <li class="card">
-                                <a href="{% url 'imagem' fotografia.id %}{{ fotografia.foto }}">
+                                <a href="{% url 'imagem' fotografia.id %}">
                                 {%if fotografia.foto == "" or fotografia == null %}
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png' %}" alt="foto">
                                 {%else%}
