--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -13,8 +13,8 @@
                         <div class="imagem__info">
                             <div class="imagem__texto">
                                 <p class="imagem__titulo">{{ fotografia.nome }}</p>
-                                <p class="imagem__descricao">{{ fotografia.data }}</p>
-                                <p class="imagem__texto">{{ fotografia.legenda }}</p>
+                                <p class="imagem__descricao">{{ fotografia.legenda }}</p>
+                                <p class="imagem__texto">{{ fotografia.descricao }}</p>
                             </div>
                         </div>
                     </div>
